Fix Collapse

--- a/frontend/src/styles/components/_AccordionHousing.scss
+++ b/frontend/src/styles/components/_AccordionHousing.scss
@@ -44,7 +44,7 @@
         transition: all .2s ease-in;
         margin-bottom: 20px;
 
-        p {
+        span {
             margin-top: 10px;
             color: $colour-primary;
             font-size: 18px;
